--- a/FFFTP.vc80ee.vcproj
+++ b/FFFTP.vc80ee.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="FFFTP"
+	Name="FFFTP.vc80"
 	ProjectGUID="{5D9496DB-45AF-4389-8FEE-27C9A2FA207A}"
 	RootNamespace="FFFTP"
 	>
@@ -28,6 +28,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				CommandLine="cscript //nologo Resource\ReplaceAfxresh.js Resource\FFFTP.rc Resource\FFFTP._replaced_.rc&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -73,7 +74,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="comctl32.lib crypt32.lib htmlhelp.lib imagehlp.lib rasapi32.lib sfc.lib winmm.lib wintrust.lib wsock32.lib"
+				AdditionalDependencies="comctl32.lib crypt32.lib htmlhelp.lib imagehlp.lib rasapi32.lib sfc.lib winmm.lib wintrust.lib wsock32.lib user32.lib shell32.lib gdi32.lib ole32.lib comdlg32.lib advapi32.lib"
 				OutputFile=".\Debug\FFFTP.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
@@ -120,6 +121,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				CommandLine="cscript //nologo Resource\ReplaceAfxresh.js Resource\FFFTP.rc Resource\FFFTP._replaced_.rc&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -167,7 +169,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="comctl32.lib crypt32.lib htmlhelp.lib imagehlp.lib rasapi32.lib sfc.lib winmm.lib wintrust.lib wsock32.lib"
+				AdditionalDependencies="comctl32.lib crypt32.lib htmlhelp.lib imagehlp.lib rasapi32.lib sfc.lib winmm.lib wintrust.lib wsock32.lib user32.lib shell32.lib gdi32.lib ole32.lib comdlg32.lib advapi32.lib"
 				OutputFile=".\Release\FFFTP.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -440,8 +442,28 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Resource\FFFTP._replaced_.rc"
+				>
+			</File>
+			<File
 				RelativePath=".\Resource\ffftp.rc"
 				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCResourceCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCResourceCompilerTool"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\filelist.c"
